adds item renderer, model layers and food consumption